@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.4">
+<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.5">
 	<requires>
 		<import addon="script.module.requests" version="2.19.1" />
 	</requires>
@@ -128,9 +128,8 @@
 			<screenshot></screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.1.4 - May 18, 2021[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed Rescrape from widget loading old cached values upon
-    re-entry of source select dialog.[/I]
+[B][COLOR red]Update - v1.1.5 - May 21, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed "Browse Series" and "Play from Here".[/I]
 		</news>
 	</extension>
 </addon>
