@@ -1,3 +1,6 @@
+[B][COLOR red]Update - v1.1.5 - May 21, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed "Browse Series" and "Play from Here".[/I]
+
 [B][COLOR red]Update - v1.1.4 - May 18, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed Rescrape from widget loading old cached values upon
     re-entry of source select dialog.[/I]
